fix: carousel nav buttons' visibility on infinite mode

--- a/src/components/z-carousel/index.stories.css
+++ b/src/components/z-carousel/index.stories.css
@@ -32,40 +32,44 @@
   height: 265px;
 }
 
-.z-carousel-story-container z-carousel li:nth-child(n + 1) .carousel-box {
+.z-carousel-story-container z-carousel li:nth-child(10n-9) .carousel-box {
   background: var(--avatar-C01);
 }
 
-.z-carousel-story-container z-carousel li:nth-child(n + 2) .carousel-box {
+.z-carousel-story-container z-carousel li:nth-child(10n-8) .carousel-box {
   background: var(--avatar-C07);
 }
 
-.z-carousel-story-container z-carousel li:nth-child(n + 3) .carousel-box {
+.z-carousel-story-container z-carousel li:nth-child(10n-7) .carousel-box {
   background: var(--avatar-C10);
 }
 
-.z-carousel-story-container z-carousel li:nth-child(n + 4) .carousel-box {
+.z-carousel-story-container z-carousel li:nth-child(10n-6) .carousel-box {
   background: var(--avatar-C15);
 }
 
-.z-carousel-story-container z-carousel li:nth-child(n + 5) .carousel-box {
+.z-carousel-story-container z-carousel li:nth-child(10n-5) .carousel-box {
   background: var(--avatar-C03);
 }
 
-.z-carousel-story-container z-carousel li:nth-child(n + 6) .carousel-box {
+.z-carousel-story-container z-carousel li:nth-child(10n-4) .carousel-box {
   background: var(--avatar-C06);
 }
 
-.z-carousel-story-container z-carousel li:nth-child(n + 7) .carousel-box {
+.z-carousel-story-container z-carousel li:nth-child(10n-3) .carousel-box {
   background: var(--avatar-C07);
 }
 
-.z-carousel-story-container z-carousel li:nth-child(n + 8) .carousel-box {
+.z-carousel-story-container z-carousel li:nth-child(10n-2) .carousel-box {
   background: var(--avatar-C11);
 }
 
-.z-carousel-story-container z-carousel li:nth-child(n + 9) .carousel-box {
+.z-carousel-story-container z-carousel li:nth-child(10n-1) .carousel-box {
   background: var(--avatar-C17);
+}
+
+.z-carousel-story-container z-carousel li:nth-child(10n) .carousel-box {
+  background: var(--avatar-C14);
 }
 
 .z-carousel-story-container z-carousel .carousel-box-loading {
